--- a/webapp-storefront/package.json
+++ b/webapp-storefront/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "web-app",
+  "name": "storefront",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "react": "^18",
