--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,21 @@ services:
    #         - "80:80"
    #      networks:
    #         - hscm-network
+   zookeeper:
+      image: 'bitnami/zookeeper:3.7.0'
+      restart: always
+      hostname: zookeeper
+      container_name: hscm-zookeeper
+      ports:
+         - '2181:2181'
+      networks:
+         - hscm-network
    kafka:
       image: 'bitnami/kafka:3.7.0'
       hostname: kafka
       container_name: hscm-kafka
       ports:
+         - '9092:9092'
          - '9094:9094'
       environment:
          - KAFKA_CFG_NODE_ID=0
@@ -34,6 +44,9 @@ services:
          - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
          - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
          - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+         - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      depends_on:
+         - zookeeper
       networks:
          - hscm-network
    mysql:
