--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,54 +13,39 @@ services:
    #      image: 'nginx:1.25.3'
    #      restart: unless-stopped
    #      container_name: hscm-nginx
+   #      ports:
+   #         - "80:80"
    #      volumes:
    #         - ./docker/server/templates:/etc/nginx/templates
    #         - ./docker/server/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
-   #      ports:
-   #         - "80:80"
    #      networks:
    #         - hscm-network
-   #   zookeeper:
-   #      image: 'bitnami/zookeeper:3.7.0'
-   #      restart: always
-   #      hostname: zookeeper
-   #      container_name: hscm-zookeeper
-   #      ports:
-   #         - '2181:2181'
-   #      environment:
-   #         - ALLOW_ANONYMOUS_LOGIN=yes
-   #      networks:
-   #         - hscm-network
-   #   kafka:
-   #      image: 'bitnami/kafka:3.7.0'
-   #      hostname: kafka
-   #      container_name: hscm-kafka
-   #      ports:
-   #         - '9092:9092'
-   #         - '9094:9094'
-   #      environment:
-   #         - KAFKA_CFG_NODE_ID=0
-   #         - KAFKA_CFG_PROCESS_ROLES=controller,broker
-   #         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-   #         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-   #         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-   #         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-   #         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-   #         - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-   #         - KAFKA_CFG_ZOOKEEPER_METADATA_MIGRATION_ENABLE=true
-   #      depends_on:
-   #         - zookeeper
-   #      networks:
-   #         - hscm-network
+   # kafka:
+   #  image: 'bitnami/kafka:3.7.0'
+   #  container_name: kafka
+   #  hostname: kafka
+   #  ports:
+   #    - '9094:9094'
+   #  environment:
+   #    - KAFKA_CFG_NODE_ID=0
+   #    - KAFKA_CFG_PROCESS_ROLES=controller,broker
+   #    - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+   #    - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+   #    - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+   #    - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+   #    - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+   #    KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+   # networks:
+   #    - hscm-network
    zookeeper:
       image: 'confluentinc/cp-zookeeper:latest'
       container_name: hscm-zookeeper
-      environment:
-         ZOOKEEPER_SERVER_ID: 1
-         ZOOKEEPER_CLIENT_PORT: 2181
-         ZOOKEEPER_TICK_TIME: 2000
       ports:
          - "22181:2181"
+      environment:
+         - ZOOKEEPER_SERVER_ID=1
+         - ZOOKEEPER_CLIENT_PORT=2181
+         - ZOOKEEPER_TICK_TIME=2000
       networks:
          - hscm-network
    kafka:
@@ -69,14 +54,14 @@ services:
       ports:
          - "9094:9094"
       environment:
-         KAFKA_BROKER_ID: 1
-         KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-         KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9090
-         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-         KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-         KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+         - KAFKA_BROKER_ID=1
+         - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+         - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+         - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
+         - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9094
+         - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+         - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+         - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTO=1
       depends_on:
          - zookeeper
       networks:
@@ -87,11 +72,11 @@ services:
       container_name: hscm-mysql
       ports:
          - '3306:3306'
+      environment:
+         - MYSQL_ROOT_PASSWORD=root
       volumes:
          - ./docker/db/mysql_initial.sql:/docker-entrypoint-initdb.d/mysql_initial.sql
          - mysql:/var/lib/mysql
-      environment:
-         - MYSQL_ROOT_PASSWORD=root
       networks:
          - hscm-network
    mongodb:
