--- a/.github/workflows/notification-ci.yaml
+++ b/.github/workflows/notification-ci.yaml
@@ -1,19 +1,19 @@
-name: order-service ci
+name: notification service ci
 
 on:
    push:
       branches: [ "main" ]
       paths:
-         - "order-service/**"
+         - "notification/**"
          - ".github/workflows/actions/action.yaml"
-         - ".github/workflows/order-service-ci.yaml"
+         - ".github/workflows/notification-ci.yaml"
          - "pom.xml"
    pull_request:
       branches: [ "main" ]
       paths:
-         - "order-service/**"
+         - "notification/**"
          - ".github/workflows/actions/action.yaml"
-         - ".github/workflows/order-service-ci.yaml"
+         - ".github/workflows/notification-ci.yaml"
          - "pom.xml"
    workflow_dispatch:
 
@@ -28,7 +28,21 @@ jobs:
                fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
          -  uses: ./.github/workflows/actions
          -  name: Run Maven Build Command
-            run: mvn clean install -pl order-service -am -DskipTests
+            run: mvn clean install -pl notification -am -DskipTests
+         #         -  name: Run Maven Test
+         #            run: mvn test -f notification
+         #         -  name: Unit Test Results
+         #            uses: dorny/test-reporter@v1
+         #            if: ${{ env.FROM_ORIGINAL_REPOSITORY == 'true' && (success() || failure()) }}
+         #            with:
+         #               name: Unit-Test-Results
+         #               path: "notification/**/surefire-reports/*.xml"
+         #               reporter: java-junit
+         #         -  name: Analyze with sonar cloud
+         #            if: ${{ env.FROM_ORIGINAL_REPOSITORY == 'true' }}
+         #            env:
+         #               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+         #            run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -f notification
          -  name: Log in to the Container registry
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/login-action@v3
@@ -40,6 +54,6 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./order-service
+               context: ./notification
                push: true
-               tags: ghcr.io/hiepthanhtran/hscm-order-service:latest
+               tags: ghcr.io/hiepthanhtran/hscms-notification:latest
